# borax

./: .gitignore  CMakeLists.txt  README.md
src/include/kernel/: kernel.h
src/kernel/: CMakeLists.txt  entry.c  kernel  linker.ld  startup.S
